Fixed the layout issue where only the image was in the sidebar, and added simple jquery to add an item to the table.

--- a/css/main.css
+++ b/css/main.css
@@ -60,8 +60,12 @@ nav li
 
 footer
 {
-	font-size: .75rem;
+	font-size: .75em;
 	text-align: center;
+	font-family: "Oswald", sans-serif;
+	font-weight: 300;
+	letter-spacing: 0.1em;
+	
 
 }
 
@@ -71,9 +75,7 @@ footer
 
 #sidebar
 {
-	float: left;
 	position: fixed;
-	display: block;
 	width: 6em;
 }
 
@@ -107,6 +109,29 @@ footer
 	display: inline;
 	padding: 0 0 0 7em;
 }
+
+/************************ 
+	CURRENT PANTRY TABLE	
+ ************************/
+
+#currentPantry
+{
+	margin: .5em auto;
+	border: 1px solid black;
+	
+	font-family: "Oswald", sans-serif;
+	
+	width: 100%;
+}
+
+
+
+#currentPantry td
+{
+	border: 1px solid #AAA;
+	padding: 0.25em;
+}
+
 
 /************
 	COLOR 
